# Assignment1

./: .gitignore  CMakeLists.txt  TeacherChecklist.md  make_assignment1.py
doc/img/: compilation_vulkan.xml  descriptor.xml  pipeline.xml
include/: A1task1.h  A1task2.h  initialization.h  task_common.h  utils_teach.h
libs/: CMakeLists.txt
shaders/: matrixRot.comp  matrixRotNaive.comp  matrixRotNaive_teach.comp  matrixRotOpti.comp  matrixRotOpti_teach.comp  vectorAdd.comp  vectorAdd_teach.comp
src/: A1task1.cpp  A1task1_teach.cpp  A1task2.cpp  A1task2_teach.cpp  initialization.cpp  main.cpp  task_common.cpp  task_common_teach.cpp  utils.cpp  utils_teach.cpp
